prevent horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 html, body, #root{
   height:100%;
+  overflow-x:hidden;
+  width:100%;
 }
 
 body {
-  overflow:hidden;
-  width:100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
